View Issue Details

IDProjectCategoryView StatusLast Update
0022730Open CASCADEOCCT:Foundation Classespublic2012-03-29 17:26
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformAOSL 
Target Version6.5.3Fixed in Version6.5.3 
Summary0022730: Print available info about exception missed in some cases
DescriptionThe message
>>*** Abort *** an exception was raised, but no catch was found.
may appear without exception description even if it is available (see non static method Standard_ErrorHandler::Destroy()).
TagsNo tags attached.
Test case numberSee report at 2011-11-17 12:43

Activities

kgv

2011-09-21 11:48

developer   ~0018237

Please look onto patch in http://svn/svn/occt/branches/OCC22730/src/Standard branch.

bugmaster

2011-09-21 12:25

administrator   ~0018242

Dear Kiril,

Could you please define target version for this issue

abv

2011-11-15 14:01

manager   ~0018550

The fix is reviewed and looks ok, please test.

mkv

2011-11-17 12:35

tester   ~0018567

Last edited: 2011-11-17 12:43

Dear BugMaster,
Workbench KAS:dev:apn-OCC22730-occt was created from SVN branch http://svn/svn/occt/branches/OCC22730
(and apn-OCC22730-products from trunk) and compiled on Linux platform.

Problem is fixed in following test cases:
caf 003 A4
caf 006 B6

chl 902 D6 D7 D8 D9 E2 S7
chl 917 A1
chl 918 D1 I7
chl 921 A1
chl 922 G6 H8 S5 U9 V1
chl 927 F9 Y3 Y4
chl 929 K9 Y4
chl 935 R2
chl 936 Y3

chp 003 A3

dea 001 A8 A9 B1 B2 B3

xml 001 B6
xml 002 B6

There are following regressions/differences in apn-OCC22730-products regarding to KAS:dev:products-652-opt:

bom 102 H6
bom 900 M1
bom 903 A2
bom 904 C5 D6
bom 909 C4
bom 911 G3

chl 913 K4
chl 922 I2

msh 002 A9 C6 T3 T4
msh 001 A9 C6 T3 T4

shd 001 R5 T7
shd 002 A2 B6 C6 A3

See results in /dn45/occttests/results/KAS/dev/apn-OCC22730-products_15112011/lin
See reference results in /dn45/occttests/results/KAS/dev/products-652-opt_23092011/lin
See test cases in /dn45/occttests/tests/ED
N.B. In order to launch testing case you can make use the following instructions
http://doc/doku.php?id=occt:certification

abv

2012-02-09 09:49

manager   ~0019477

Please re-test: the only change in this fix is that more meaningful message will appear when execution is aborted due to unhandled exception, thus reported regressions most likely just mean that the test case needs to be corrected.

bugmaster

2012-02-09 10:39

administrator   ~0019482

Mikhail,

Please retest branch more carefully

aan

2012-02-20 14:18

developer   ~0019665

Dear BugMaster,
Workbench KAS:dev:aan-22730-occt from SVN branch http://svn/svn/occt/branches/OCC22730
(and aan-22730-products from trunk) was successfully compiled on Linux and Windows platforms, and tested on Linux and Windows platforms.

There are not regressions in aan-22730-products regarding to KAS:dev:products-20120217-opt

See results in /QADisk/occttests/results/KAS/dev/aan-22730-products_17022012/lin
See reference results in /QADisk/occttests/results/KAS/dev/products-20120217-opt_17022012/lin
See test cases in /QADisk/occttests/tests/ED
N.B. In order to launch testing case you can make use the following instructions
http://doc/doku.php?id=occt:certification

bugmaster

2012-03-10 13:04

administrator   ~0019900

Integrated into master

Related Changesets

occt: master a01039b9

2012-03-06 07:55:39

kgv


Committer: bugmaster Details Diff
0022730: Print available info about exception missed in some cases Affected Issues
0022730
mod - src/Standard/Standard_ErrorHandler.cdl Diff File
mod - src/Standard/Standard_ErrorHandler.cxx Diff File
mod - src/Standard/Standard_Failure.cxx Diff File

Issue History

Date Modified Username Field Change
2011-09-21 11:24 kgv New Issue
2011-09-21 11:24 kgv Assigned To => kgv
2011-09-21 11:47 kgv Status new => assigned
2011-09-21 11:48 kgv Note Added: 0018237
2011-09-21 11:48 kgv Assigned To kgv => abv
2011-09-21 11:48 kgv Status assigned => resolved
2011-09-21 12:25 bugmaster Note Added: 0018242
2011-09-21 12:31 kgv Target Version => 6.5.3
2011-11-15 14:01 abv Note Added: 0018550
2011-11-15 14:01 abv Status resolved => reviewed
2011-11-17 12:35 mkv Note Added: 0018567
2011-11-17 12:43 mkv Note Edited: 0018567
2011-11-17 12:44 mkv Test case number => See report at 2011-11-17 12:43
2011-11-17 12:44 mkv Assigned To abv => kgv
2011-11-17 12:44 mkv Status reviewed => assigned
2012-02-09 09:49 abv Note Added: 0019477
2012-02-09 09:49 abv Assigned To kgv => bugmaster
2012-02-09 09:49 abv Status assigned => feedback
2012-02-09 10:39 bugmaster Note Added: 0019482
2012-02-09 10:40 bugmaster Assigned To bugmaster => mkv
2012-02-17 16:21 mkv Assigned To mkv => aan
2012-02-17 16:21 mkv Status feedback => assigned
2012-02-17 18:36 abv Sticky Issue No => Yes
2012-02-17 18:36 abv Sticky Issue Yes => No
2012-02-17 18:36 abv Sticky Issue No => Yes
2012-02-20 14:18 aan Note Added: 0019665
2012-02-20 14:18 aan Status assigned => feedback
2012-02-20 14:18 aan Status feedback => tested
2012-02-20 17:14 abv Sticky Issue Yes => No
2012-03-10 13:04 bugmaster Note Added: 0019900
2012-03-10 13:04 bugmaster Status tested => verified
2012-03-10 13:04 bugmaster Resolution open => fixed
2012-03-10 13:04 bugmaster Assigned To aan => kgv
2012-03-29 17:26 bugmaster Changeset attached => occt master a01039b9