0022730: Print available info about exception missed in some cases